--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO' crossorigin='anonymous'>
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to <span style="color: steelblue;">QuizzYuh!</span></h1>
+        <div class="container" text-align="center">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"><h1>Welcome to: <span style="color: steelblue;font-weight: bold;">QuizzYuh!</span></h1></div>
+                <div class="col" id="timer"></div>
+            </div>
+        </div> 
     </header>
     <div class="container">
-
+        <div class="row">
+            <div id="gameArea" class="col-md-8" style="text-align: center;">
+               <h1>Test Content</h1>
+            </div>
+        </div>
     </div>
     <script src="/assets/js/app.js"></script>
 </body>
